<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/dismiss_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="#00FFFFFF"
                android:contentDescription="@string/dismiss_button_description"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="@string/popup_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/popup_links"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="none"
                android:clickable="false"
                android:linksClickable="true"
                android:padding="10dp"
                android:text="@string/popup_links"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHighlight="#00FFFFFF"
                android:textColorLink="@color/material_dynamic_primary70"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>